test/tests/operators/match/error_record_rest_duplicate.txt
error: record pattern rest appears more than once
 --> tests/operators/match/error_record_rest_duplicate.tql:7:10
  |
7 |   {x: 1, .., ..} => {
  |          ^^ 
  |
